# edison

./: .coderabbit.yaml  .dockerignore  .env.docker.example  .env.example  .eslintrc.cjs  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CORE_REFACTORING_PLAN.md  Dockerfile.api  Dockerfile.web  EDISON_MIGRATION_FINAL_IMPLEMENTATION_PLAN.md  EDISON_PROGRESS.md  PHASE_FOLLOWUP_TASKS_NEEDED.md  PHASE_PRE-EDISON_MIGRATION_1_DEEP_CONTENT_VALIDATION_AGENTS_ENTRY_POINT.md  PHASE_PRE-EDISON_MIGRATION_1_NEW_ANALYSIS.md  PHASE_PRE-EDISON_MIGRATION_1_RE-ANALYSIS.md  PHASE_PRE-EDISON_MIGRATION_CONSOLIDATED_PLAN.md  PHASE_UVX_MIGRATION_FINALIZATION.md  PHASE_UVX_MIGRATION_FINALIZATION_NEXT_STEP.md  README.docker.md  README.md  START_SESSION_FIX_REPORT.md  T010_FINAL_REPORT.md  TEST_FIX_REPORT.md  TEST_FIX_SUMMARY.md  TEST_ISOLATION_AUDIT_REPORT.md  TEST_ISOLATION_FIXES.md  TEST_LEGACY_PATHS_FIX_SUMMARY.md  TEST_SUITE_ANALYSIS.md  docker-compose.prod.yml  docker-compose.yml  edison_plan.md  edison_specs.md  opencode.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.augment/: settings.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: component-builder.md  database-architect.md  python-developer.md  test-engineer.md
.claude/commands/: edison-memory-run.md  edison-memory-save.md  edison-memory-search.md  edison-qa-audit.md  edison-qa-new.md  edison-qa-promote.md  edison-qa-validate.md  edison-rules-current.md  edison-rules-tdd.md  edison-session-context.md  edison-session-next.md  edison-session-prompts.md  edison-session-status.md  edison-start-auto-next.md  edison-start-cleanup.md  edison-start-continue-stale.md  edison-start-new-session.md  edison-start-resume-session.md  edison-start-validate-session.md  edison-task-blocked.md  edison-task-claim.md  edison-task-new.md  edison-task-ready.md  edison-task-status.md  edison-validate-now.md
.claude/hooks/: commit-guard.sh  compaction-reminder.sh  inject-session-context.sh  inject-task-rules.sh  remind-tdd.sh  session-cleanup.sh  session-init.sh
.cursor/agents/: code-reviewer.md  database-architect.md  feature-implementer.md  python-developer.md
.cursor/commands/: edison-memory-run.md  edison-memory-save.md  edison-memory-search.md  edison-qa-audit.md  edison-qa-new.md  edison-qa-promote.md  edison-qa-validate.md  edison-rules-current.md  edison-rules-tdd.md  edison-session-context.md  edison-session-next.md  edison-session-prompts.md  edison-session-status.md  edison-start-auto-next.md  edison-start-cleanup.md  edison-start-continue-stale.md  edison-start-new-session.md  edison-start-resume-session.md  edison-start-validate-session.md  edison-task-blocked.md  edison-task-claim.md  edison-task-new.md  edison-task-ready.md  edison-task-status.md  edison-validate-now.md
.cursor/plans/: COMPREHENSIVE-UNIFICATION-PLAN.md  _unified-template-composition-architecture-37e49df7.plan.md  complete-guidelines-restructuring-plan-3586ed4c.plan copy 2.md  complete-guidelines-restructuring-plan-3586ed4c.plan copy 3.md  complete-guidelines-restructuring-plan-3586ed4c.plan copy 4.md  complete-guidelines-restructuring-plan-3586ed4c.plan copy.md  complete-guidelines-restructuring-plan-3586ed4c.plan.md  draft-unification-plan.md  edison-composition-implementation-3c23dff0.plan.md  edison-composition-unification.plan.md  (+6 more)
apps/web/: package.json  (+3 more)
audit/: AUDIT_02_ACTION_PLAN.md  AUDIT_02_HARDCODED_VALUES_REPORT.md  AUDIT_02_QUICK_REFERENCE.md  AUDIT_02_SUMMARY.txt  AUDIT_02_VIOLATIONS_BY_CATEGORY.txt  AUDIT_03_ACTION_PLAN.md  AUDIT_03_COMMANDS_RUN.md  AUDIT_03_EXECUTIVE_SUMMARY.md  AUDIT_03_TESTING_PRACTICES_REPORT.md  AUDIT_04_CODE_QUALITY_ARCHITECTURE.md  AUDIT_04_EXECUTIVE_SUMMARY.md  AUDIT_04_INDEX.md  AUDIT_04_METRICS_TRACKER.md  AUDIT_04_QUICK_REFERENCE.md  AUDIT_1_CHECKLIST.md  AUDIT_1_DRY_DUPLICATION_ANALYSIS.md  AUDIT_1_QUICK_REFERENCE.md  AUDIT_1_SUMMARY.md  AUDIT_5_EXECUTIVE_SUMMARY.md  AUDIT_5_INDEX.md  AUDIT_5_LEGACY_COHERENCE_REPORT.md  AUDIT_5_METRICS.md  AUDIT_5_REMEDIATION_CHECKLIST.md  EDISON_CLI_REFERENCE.md  IMPLEMENTATION_PLAN.md  MASTER_AUDIT_FINAL_REPORT.md  README.md  edison-audit-1-dry-duplication.md  edison-audit-2-config-hardcoded.md  edison-audit-3-testing-practices.md  edison-audit-4-code-quality.md  edison-audit-5-legacy-coherence.md  edison-master-audit.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: __init__.py  datasets.py  experiments.py  hitl.py  iterations.py  jobs.py  projects.py  prompts.py  runs.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/jobs/: handlers.py  registry.py
backend/app/models/: __init__.py  base.py
backend/app/schemas/: common.py  dataset.py  experiment.py  iteration.py  job.py  project.py  prompt.py  run.py
backend/app/workers/: worker.py
backend/tests/: test_job_registry.py
docs/: ARCHITECTURE.md  CAPABILITY_MATRIX.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTEXT_WINDOW_MANAGEMENT.md  CONTINUATION.md  MEMORY.md  OPENCODE_INTEGRATION.md  OPENSPEC_INTEGRATION.md  PAL_SETUP.md  PROMPT_DEVELOPMENT.md  ROLES.md  SPECKIT_INTEGRATION.md  STATE_MACHINE.md  TEMPLATING.md  WORKFLOWS.md  WORKTREES.md  ZEN_SETUP.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
prisma/: schema.prisma  seed.ts
scripts/: convert_imports.py  docker-entrypoint-api.sh  fix_core_root_patterns.py  fix_test_imports.py  test-fast  test-slow  validate_test_standards.py  verify_pal_setup.sh  verify_zen_setup.sh  wait-for-it.sh
tests/: DRY_ADOPTION_PLAN.md  IMPROVEMENT_PLAN.md  README.md  RESTRUCTURING_PLAN.md  SESSION_CLEANUP_FIX.md  conftest.py  pytest.ini  test_composition_engine.py  test_conftest_no_legacy_tasks.py  test_cursor_adapter_merge.py  test_isolated_project_env_scaffolding.py  test_no_legacy_imports.py  test_orchestrator.py  test_other_modules.py  test_rules_engine.py  test_t022_composition.py  test_t022_orchestrator.py  test_t022_other_modules.py  test_t022_qa.py  test_timestamp_refactor.py  test_timestamp_refactor_t027.py  test_zen_composition.py
(+3176 files in other folders)
