[project]
name = "edison"
version = "1.0.0"
description = "AI-automated project management framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Edison Team" }
]
keywords = ["ai", "automation", "project-management", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "Jinja2>=3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
tui = ["prompt_toolkit>=3.0"]
dev = [
    "build>=1.0",
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
    "types-psutil>=5.9.0",
]

[project.scripts]
edison = "edison.cli._dispatcher:main"

[project.urls]
Homepage = "https://github.com/yourorg/edison"
Documentation = "https://github.com/yourorg/edison#readme"
Repository = "https://github.com/yourorg/edison"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edison"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --import-mode=importlib"
norecursedirs = ["helpers"]
markers = [
    "integration: Integration tests (multiple components working together)",
    "e2e: End-to-end tests (full system tests)",
    "slow: Tests taking more than 2 seconds",
    "fast: Fast tests (under 1 second)",
    "requires_git: Tests that require git operations and git to be installed",
    "requires_subprocess: Tests that spawn subprocesses",
    "requires_pnpm: Tests that require pnpm/node",
    "worktree: Tests related to git worktree functionality",
    "session: Tests related to session management",
    "task: Tests related to task lifecycle",
    "qa: Tests related to QA/validation",
    "context7: Tests related to Context7 enforcement",
    "golden_path: Golden-path example tests showing correct patterns",
    "scenario: High-level scenario coverage tests",
    "edge_case: Edge case and error handling tests",
    "taskstate: Tests that validate task state coverage",
    "guards: Tests focused on guard and state-machine validation",
    "bundle: Bundle/aggregate validation tests",
    "security: Tests focused on security and invariant enforcement",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    "src/edison/data/",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.coverage.run]
source = ["src/edison"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
