[tool.poetry]
name = "edison-backend"
version = "0.1.0"
description = "Edison backend API and worker"
authors = ["Edison Team <team@example.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
email-validator = "^2.1.1"
httpx = "^0.27.0"
tenacity = "^8.2.3"
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
itsdangerous = "^2.1.2"
cryptography = "^42.0.5"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
anyio = "^4.3.0"
ruff = "^0.4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
